fix(slider): vertical scroll on mobile

--- a/src/app/modules/shared/components/gallery/gallery.component.scss
+++ b/src/app/modules/shared/components/gallery/gallery.component.scss
@@ -40,6 +40,10 @@
           .images-container {
             background-color: whitesmoke;
             border-radius: 3px;
+            touch-action: pan-y !important;
+            @include tablet {
+              touch-action: none !important;
+            }
           }
         }
 
